--- a/index.html
+++ b/index.html
@@ -1,1 +1,42 @@
 
+
+<!DOCTYPE html>
+<html>
+<head>
+  <meta charset="utf-8">
+  <title>Custom Marker Molecule AR</title>
+
+  <!-- A-Frame -->
+  <script src="https://aframe.io/releases/1.4.0/aframe.min.js"></script>
+
+  <!-- AR.js -->
+  <script src="https://cdn.jsdelivr.net/gh/AR-js-org/AR.js@3.4.5/aframe/build/aframe-ar.js"></script>
+</head>
+
+<body style="margin:0; overflow:hidden;">
+  <a-scene
+    embedded
+    arjs="sourceType: webcam; debugUIEnabled: false;"
+    renderer="colorManagement: true; physicallyCorrectLights: true;"
+  >
+
+    <!-- CUSTOM MARKER -->
+    <a-marker
+      type="pattern"
+      url="markers/my_marker.patt">
+
+      <!-- MOLECULE MODEL -->
+      <a-entity
+        gltf-model="molecule.glb"
+        scale="0.4 0.4 0.4"
+        position="0 0 0"
+        rotation="0 0 0"
+        animation="property: rotation; to: 0 360 0; loop: true; dur: 10000">
+      </a-entity>
+
+    </a-marker>
+
+    <a-entity camera></a-entity>
+  </a-scene>
+</body>
+</html>
