--- a/index1.html
+++ b/index1.html
@@ -73,14 +73,15 @@
     <!-- Single Dynamic Model -->
     <a-entity
       id="reaction-model"
-      scale="0.05 0.05 0.05"
+      scale="0.02 0.02 0.02"
       position="0 0.05 0"
-      rotation="-90 0 0"
+      <!-- rotation="-90 0 0" -->
       visible="false"
-      animation="property: rotation; to: -90 360 0; loop: true; dur: 12000">
+      <!-- animation="property: rotation; to: -90 360 0; loop: true; dur: 12000"> -->
     </a-entity>
 
     <a-entity camera></a-entity>
   </a-scene>
 </body>
 </html>
+
