--- a/index1.html
+++ b/index1.html
@@ -73,9 +73,9 @@
     <!-- Single Dynamic Model -->
     <a-entity
       id="reaction-model"
-      scale="0.02 0.02 0.02"
+      scale="0.01 0.01 0.01"
       position="0 0.05 0"
-      <!-- rotation="-90 0 0" -->
+      rotation="-90 0 0"
       visible="false"
       <!-- animation="property: rotation; to: -90 360 0; loop: true; dur: 12000"> -->
     </a-entity>
@@ -84,4 +84,5 @@
   </a-scene>
 </body>
 </html>
+
 
