--- a/index1.html
+++ b/index1.html
@@ -72,17 +72,18 @@
 
     <!-- Single Dynamic Model -->
     <a-entity
-      id="reaction-model"
-      scale="0.01 0.01 0.01"
-      position="0 0.05 0"
-      rotation="-90 0 0"
-      visible="false"
-      <!-- animation="property: rotation; to: -90 360 0; loop: true; dur: 12000"> -->
-    </a-entity>
+  id="reaction-model"
+  scale="0.008 0.008 0.008"
+  position="0 0 0"
+  rotation="-90 0 0"
+  visible="false">
+</a-entity>
+
 
     <a-entity camera></a-entity>
   </a-scene>
 </body>
 </html>
+
 
 
