--- a/index1.html
+++ b/index1.html
@@ -37,6 +37,48 @@
       }
     });
   </script>
+
+  <script>
+AFRAME.registerComponent("touch-transform", {
+  init: function () {
+    this.scaleFactor = 1;
+    this.rotationY = 0;
+    this.rotationX = -90;
+
+    this.el.sceneEl.addEventListener("touchmove", (e) => {
+      if (e.touches.length === 1) {
+        // ROTATE with one finger
+        this.rotationY += e.touches[0].movementX * 0.5;
+        this.el.setAttribute("rotation", `${this.rotationX} ${this.rotationY} 0`);
+      }
+
+      if (e.touches.length === 2) {
+        // ZOOM with two fingers
+        const dx = e.touches[0].pageX - e.touches[1].pageX;
+        const dy = e.touches[0].pageY - e.touches[1].pageY;
+        const distance = Math.sqrt(dx * dx + dy * dy);
+
+        if (!this.lastDistance) {
+          this.lastDistance = distance;
+        }
+
+        const delta = distance - this.lastDistance;
+        this.scaleFactor += delta * 0.0005;
+
+        this.scaleFactor = Math.min(Math.max(this.scaleFactor, 0.002), 0.02);
+
+        this.el.setAttribute("scale", `${this.scaleFactor} ${this.scaleFactor} ${this.scaleFactor}`);
+        this.lastDistance = distance;
+      }
+    });
+
+    this.el.sceneEl.addEventListener("touchend", () => {
+      this.lastDistance = null;
+    });
+  }
+});
+</script>
+
 </head>
 
 <body style="margin:0; overflow:hidden;">
@@ -71,19 +113,22 @@
     </a-marker>
 
     <!-- Single Dynamic Model -->
-    <a-entity
+   <a-entity
   id="reaction-model"
   scale="0.008 0.008 0.008"
   position="0 0 0"
   rotation="-90 0 0"
-  visible="false">
+  visible="false"
+  touch-transform>
 </a-entity>
+
 
 
     <a-entity camera></a-entity>
   </a-scene>
 </body>
 </html>
+
 
 
 
