--- a/index.html
+++ b/index.html
@@ -11,6 +11,48 @@
 
   <!-- AR.js -->
   <script src="https://cdn.jsdelivr.net/gh/AR-js-org/AR.js@3.4.5/aframe/build/aframe-ar.js"></script>
+
+  <script>
+AFRAME.registerComponent("touch-transform", {
+  init: function () {
+    this.scaleFactor = 1;
+    this.rotationY = 0;
+    this.rotationX = -90;
+
+    this.el.sceneEl.addEventListener("touchmove", (e) => {
+      if (e.touches.length === 1) {
+        // ROTATE with one finger
+        this.rotationY += e.touches[0].movementX * 0.5;
+        this.el.setAttribute("rotation", `${this.rotationX} ${this.rotationY} 0`);
+      }
+
+      if (e.touches.length === 2) {
+        // ZOOM with two fingers
+        const dx = e.touches[0].pageX - e.touches[1].pageX;
+        const dy = e.touches[0].pageY - e.touches[1].pageY;
+        const distance = Math.sqrt(dx * dx + dy * dy);
+
+        if (!this.lastDistance) {
+          this.lastDistance = distance;
+        }
+
+        const delta = distance - this.lastDistance;
+        this.scaleFactor += delta * 0.0005;
+
+        this.scaleFactor = Math.min(Math.max(this.scaleFactor, 0.002), 0.02);
+
+        this.el.setAttribute("scale", `${this.scaleFactor} ${this.scaleFactor} ${this.scaleFactor}`);
+        this.lastDistance = distance;
+      }
+    });
+
+    this.el.sceneEl.addEventListener("touchend", () => {
+      this.lastDistance = null;
+    });
+  }
+});
+</script>
+
 </head>
 
 <body style="margin:0; overflow:hidden;">
@@ -38,7 +80,7 @@
   gltf-model="molecule.glb"
   scale="0.4 0.4 0.4"
   position="0 0 0"
-  rotation="-90 0 0"
+  <!-- rotation="-90 0 0" -->
   visible="false"
   touch-transform>
 </a-entity>
@@ -50,4 +92,5 @@
   </a-scene>
 </body>
 </html>
+
 
