--- a/index.html
+++ b/index.html
@@ -76,14 +76,15 @@ AFRAME.registerComponent("touch-transform", {
         animation="property: rotation; to: 0 360 0; loop: true; dur: 10000">
       </a-entity> -->
 
-      <a-entity
+    <a-entity
   gltf-model="molecule.glb"
   scale="0.4 0.4 0.4"
   position="0 0 0"
-  <!-- rotation="-90 0 0" -->
-  visible="false"
+  rotation="0 0 0"
+  visible="true"
   touch-transform>
 </a-entity>
+
 
 
     </a-marker>
@@ -92,5 +93,6 @@ AFRAME.registerComponent("touch-transform", {
   </a-scene>
 </body>
 </html>
+
 
 
