--- a/index1.html
+++ b/index1.html
@@ -115,10 +115,10 @@ AFRAME.registerComponent("touch-transform", {
     <!-- Single Dynamic Model -->
    <a-entity
   id="reaction-model"
-  scale="0.008 0.008 0.008"
+  scale="0.4 0.4 0.4"
   position="0 0 0"
-  rotation="-90 0 0"
-  visible="false"
+  rotation="0 0 0"
+  visible="true"
   touch-transform>
 </a-entity>
 
@@ -128,6 +128,7 @@ AFRAME.registerComponent("touch-transform", {
   </a-scene>
 </body>
 </html>
+
 
 
 
