--- a/index1.html
+++ b/index1.html
@@ -38,54 +38,36 @@
     });
   </script>
 
-  <script>
+<script>
 AFRAME.registerComponent("touch-transform", {
   init: function () {
-    // 🔥 MUST match entity scale
-    this.scaleFactor = 0.005;
-
+    this.scaleFactor = 1;
     this.rotationY = 0;
-    this.rotationX = 0;
-    this.lastDistance = null;
+    this.rotationX = -90;
 
     this.el.sceneEl.addEventListener("touchmove", (e) => {
-
-      // ONE FINGER → ROTATE
       if (e.touches.length === 1) {
-        const dx = e.touches[0].movementX || 0;
-        const dy = e.touches[0].movementY || 0;
-
-        this.rotationY += dx * 0.5;
-        this.rotationX -= dy * 0.5;
-
-        this.el.setAttribute(
-          "rotation",
-          `${this.rotationX} ${this.rotationY} 0`
-        );
+        // ROTATE with one finger
+        this.rotationY += e.touches[0].movementX * 0.5;
+        this.el.setAttribute("rotation", `${this.rotationX} ${this.rotationY} 0`);
       }
 
-      // TWO FINGERS → ZOOM
       if (e.touches.length === 2) {
+        // ZOOM with two fingers
         const dx = e.touches[0].pageX - e.touches[1].pageX;
         const dy = e.touches[0].pageY - e.touches[1].pageY;
         const distance = Math.sqrt(dx * dx + dy * dy);
 
-        if (this.lastDistance !== null) {
-          const delta = distance - this.lastDistance;
-          this.scaleFactor += delta * 0.0005;
-
-          // 🔒 Clamp scale
-          this.scaleFactor = Math.min(
-            Math.max(this.scaleFactor, 0.002),
-            0.015
-          );
-
-          this.el.setAttribute(
-            "scale",
-            `${this.scaleFactor} ${this.scaleFactor} ${this.scaleFactor}`
-          );
+        if (!this.lastDistance) {
+          this.lastDistance = distance;
         }
 
+        const delta = distance - this.lastDistance;
+        this.scaleFactor += delta * 0.0005;
+
+        this.scaleFactor = Math.min(Math.max(this.scaleFactor, 0.002), 0.02);
+
+        this.el.setAttribute("scale", `${this.scaleFactor} ${this.scaleFactor} ${this.scaleFactor}`);
         this.lastDistance = distance;
       }
     });
@@ -96,6 +78,7 @@ AFRAME.registerComponent("touch-transform", {
   }
 });
 </script>
+
 
 
 </head>
@@ -148,6 +131,7 @@ AFRAME.registerComponent("touch-transform", {
   </a-scene>
 </body>
 </html>
+
 
 
 
