--- a/index1.html
+++ b/index1.html
@@ -10,8 +10,59 @@
   <!-- AR.js -->
   <script src="https://cdn.jsdelivr.net/gh/AR-js-org/AR.js@3.4.5/aframe/build/aframe-ar.js"></script>
 
+  <!-- Touch Transform Component -->
   <script>
-    // Marker → Model mapping
+    AFRAME.registerComponent("touch-transform", {
+      init: function () {
+        this.scaleFactor = 0.005;
+        this.rotationX = 0;
+        this.rotationY = 0;
+        this.lastDistance = null;
+        this.enabled = false;
+
+        this.el.sceneEl.addEventListener("touchmove", (e) => {
+          if (!this.enabled) return;
+
+          // One finger → rotate
+          if (e.touches.length === 1) {
+            this.rotationY += (e.touches[0].movementX || 0) * 0.5;
+            this.rotationX -= (e.touches[0].movementY || 0) * 0.5;
+            this.el.setAttribute("rotation", `${this.rotationX} ${this.rotationY} 0`);
+          }
+
+          // Two fingers → zoom
+          if (e.touches.length === 2) {
+            const dx = e.touches[0].pageX - e.touches[1].pageX;
+            const dy = e.touches[0].pageY - e.touches[1].pageY;
+            const distance = Math.sqrt(dx * dx + dy * dy);
+
+            if (this.lastDistance !== null) {
+              const delta = distance - this.lastDistance;
+              this.scaleFactor += delta * 0.0005;
+              this.scaleFactor = Math.min(Math.max(this.scaleFactor, 0.002), 0.015);
+              this.el.setAttribute("scale", `${this.scaleFactor} ${this.scaleFactor} ${this.scaleFactor}`);
+            }
+            this.lastDistance = distance;
+          }
+        });
+
+        this.el.sceneEl.addEventListener("touchend", () => {
+          this.lastDistance = null;
+        });
+      },
+
+      enable: function () {
+        this.enabled = true;
+      },
+
+      disable: function () {
+        this.enabled = false;
+      }
+    });
+  </script>
+
+  <!-- Marker Handler -->
+  <script>
     const MODEL_MAP = {
       "marker-carbon": "models/carbon.glb",
       "marker-oxygen": "models/oxygen.glb",
@@ -25,62 +76,30 @@
 
         this.el.addEventListener("markerFound", () => {
           const modelPath = MODEL_MAP[markerId];
-          if (modelPath) {
+          if (!modelPath) return;
+
+          // Reset model safely
+          modelEntity.setAttribute("visible", "false");
+          modelEntity.removeAttribute("gltf-model");
+
+          setTimeout(() => {
             modelEntity.setAttribute("gltf-model", modelPath);
+            modelEntity.setAttribute("scale", "0.005 0.005 0.005");
+            modelEntity.setAttribute("position", "0 0.02 0");
+            modelEntity.setAttribute("rotation", "0 0 0");
             modelEntity.setAttribute("visible", "true");
-          }
+
+            modelEntity.components["touch-transform"].enable();
+          }, 50);
         });
 
         this.el.addEventListener("markerLost", () => {
           modelEntity.setAttribute("visible", "false");
+          modelEntity.components["touch-transform"].disable();
         });
       }
     });
   </script>
-
-<script>
-AFRAME.registerComponent("touch-transform", {
-  init: function () {
-    this.scaleFactor = 1;
-    this.rotationY = 0;
-    this.rotationX = -90;
-
-    this.el.sceneEl.addEventListener("touchmove", (e) => {
-      if (e.touches.length === 1) {
-        // ROTATE with one finger
-        this.rotationY += e.touches[0].movementX * 0.5;
-        this.el.setAttribute("rotation", `${this.rotationX} ${this.rotationY} 0`);
-      }
-
-      if (e.touches.length === 2) {
-        // ZOOM with two fingers
-        const dx = e.touches[0].pageX - e.touches[1].pageX;
-        const dy = e.touches[0].pageY - e.touches[1].pageY;
-        const distance = Math.sqrt(dx * dx + dy * dy);
-
-        if (!this.lastDistance) {
-          this.lastDistance = distance;
-        }
-
-        const delta = distance - this.lastDistance;
-        this.scaleFactor += delta * 0.0005;
-
-        this.scaleFactor = Math.min(Math.max(this.scaleFactor, 0.002), 0.02);
-
-        this.el.setAttribute("scale", `${this.scaleFactor} ${this.scaleFactor} ${this.scaleFactor}`);
-        this.lastDistance = distance;
-      }
-    });
-
-    this.el.sceneEl.addEventListener("touchend", () => {
-      this.lastDistance = null;
-    });
-  }
-});
-</script>
-
-
-
 </head>
 
 <body style="margin:0; overflow:hidden;">
@@ -115,28 +134,16 @@ AFRAME.registerComponent("touch-transform", {
     </a-marker>
 
     <!-- Single Dynamic Model -->
-  <a-entity
-  id="reaction-model"
-  scale="0.005 0.005 0.005"
-  position="0 0.02 0"
-  rotation="0 0 0"
-  visible="true"
-  touch-transform>
-</a-entity>
-
-
-
+    <a-entity
+      id="reaction-model"
+      scale="0.005 0.005 0.005"
+      position="0 0.02 0"
+      rotation="0 0 0"
+      visible="false"
+      touch-transform>
+    </a-entity>
 
     <a-entity camera></a-entity>
   </a-scene>
 </body>
 </html>
-
-
-
-
-
-
-
-
-
