--- a/index2.html
+++ b/index2.html
@@ -26,10 +26,10 @@
       <!-- MOLECULE MODEL -->
       <a-entity
         gltf-model="models/benzene.glb"
-        scale="0.4 0.4 0.4"
+        scale="0.1 0.1 0.1"
         position="0 0 0"
         rotation="0 0 0"
-        animation="property: rotation; to: 0 360 0; loop: true; dur: 10000">
+        <!-- animation="property: rotation; to: 0 360 0; loop: true; dur: 10000"> -->
       </a-entity>
 
     </a-marker>
@@ -38,3 +38,4 @@
   </a-scene>
 </body>
 </html>
+
