--- a/index2.html
+++ b/index2.html
@@ -9,6 +9,63 @@
 
   <!-- AR.js -->
   <script src="https://cdn.jsdelivr.net/gh/AR-js-org/AR.js@3.4.5/aframe/build/aframe-ar.js"></script>
+
+  <!-- Touch Rotate & Zoom -->
+  <script>
+    AFRAME.registerComponent("touch-transform", {
+      init: function () {
+        this.scaleFactor = 0.008;
+        this.rotationX = 0;
+        this.rotationY = 0;
+        this.lastDistance = null;
+
+        this.el.sceneEl.addEventListener("touchmove", (e) => {
+
+          // 👆 ONE finger → ROTATE
+          if (e.touches.length === 1) {
+            const dx = e.touches[0].movementX || 0;
+            const dy = e.touches[0].movementY || 0;
+
+            this.rotationY += dx * 0.5;
+            this.rotationX -= dy * 0.5;
+
+            this.el.setAttribute(
+              "rotation",
+              `${this.rotationX} ${this.rotationY} 0`
+            );
+          }
+
+          // 🤏 TWO fingers → ZOOM
+          if (e.touches.length === 2) {
+            const dx = e.touches[0].pageX - e.touches[1].pageX;
+            const dy = e.touches[0].pageY - e.touches[1].pageY;
+            const distance = Math.sqrt(dx * dx + dy * dy);
+
+            if (this.lastDistance !== null) {
+              const delta = distance - this.lastDistance;
+              this.scaleFactor += delta * 0.0005;
+
+              this.scaleFactor = Math.min(
+                Math.max(this.scaleFactor, 0.002),
+                0.02
+              );
+
+              this.el.setAttribute(
+                "scale",
+                `${this.scaleFactor} ${this.scaleFactor} ${this.scaleFactor}`
+              );
+            }
+
+            this.lastDistance = distance;
+          }
+        });
+
+        this.el.sceneEl.addEventListener("touchend", () => {
+          this.lastDistance = null;
+        });
+      }
+    });
+  </script>
 </head>
 
 <body style="margin:0; overflow:hidden;">
@@ -18,18 +75,20 @@
     renderer="colorManagement: true; physicallyCorrectLights: true;"
   >
 
-    <!-- CUSTOM MARKER -->
-    <a-marker
-      type="pattern"
-      url="markers/benzene.patt">
+    <!-- LIGHTING -->
+    <a-light type="ambient" intensity="1"></a-light>
+    <a-light type="directional" position="1 2 1"></a-light>
 
-      <!-- MOLECULE MODEL -->
+    <!-- CUSTOM MARKER -->
+    <a-marker type="pattern" url="markers/benzene.patt">
+
+      <!-- MOLECULE MODEL (NO AUTO ANIMATION) -->
       <a-entity
         gltf-model="models/benzene.glb"
-        scale="0.1 0.1 0.1"
+        scale="0.008 0.008 0.008"
         position="0 0 0"
         rotation="0 0 0"
-        <!-- animation="property: rotation; to: 0 360 0; loop: true; dur: 10000"> -->
+        touch-transform>
       </a-entity>
 
     </a-marker>
@@ -38,4 +97,3 @@
   </a-scene>
 </body>
 </html>
-
